fix z-index bug

--- a/components/Filters/style.scss
+++ b/components/Filters/style.scss
@@ -15,7 +15,7 @@
         display: none;
     }
     position: relative;
-    z-index: 2;
+    // z-index: 2;
 }
 
 .recommendation-toggle__icon{
